static/main.css
body{
    /*background-color: #cb4b16;*/
    -webkit-user-select: 'none';
    -moz-user-select: 'none';
    -ms-user-select: none;
    user-select: 'none';
}
canvas{
    background-color: #efefef;
}

